@@ -3,6 +3,7 @@ Kiwix 0.9 alpha1
 * Chinese localization
 * Persian localization
 * Bookmarks and Notes (experimental)
+* Introduction of kiwix-compact.sh able to simply reduce by ~50% indexes (ID: 2834599)
 
 Kiwix 0.8 rc3
 * Small improvement by the kiwix.sh launcher (should work now under Slackware (see https://sourceforge.net/forum/message.php?msg_id=7561932)
